# The-Goonies-APP

./: .gitignore  CMakeLists.txt  Makefile  README.md  resize.py  scratch_check.py
assets/romfs/github/: goonies.json
assets/romfs/i18n/: de.json  en.json  es.json  fr.json  it.json  ja.json  ko.json  nl.json  pt.json  ru.json  se.json  uk.json  vi.json  zh-CN.json  zh-TW.json
assets/romfs/themes/: default_theme.ini
include/: app.hpp  defines.hpp  download.hpp  dumper.hpp  evman.hpp  ftpsrv_helper.hpp  hasher.hpp  haze_helper.hpp  i18n.hpp  image.hpp  location.hpp  log.hpp  minizip_helper.hpp  nro.hpp  option.hpp  owo.hpp  swkbd.hpp  threaded_file_transfer.hpp  title_info.hpp  usbdvd.hpp  web.hpp
include/backend_usb/: base.hpp  usb_api.hpp  usb_dumper.hpp  usb_installer.hpp  usb_uploader.hpp  usbds.hpp  usbhs.hpp
include/core_utils/: audio.hpp  devoptab.hpp  devoptab_common.hpp  devoptab_romfs.hpp  lru.hpp  nsz_dumper.hpp  profile.hpp  thread.hpp  utils.hpp
include/frontend/: error_box.hpp  list.hpp  music_player.hpp  notification.hpp  nvg_util.hpp  object.hpp  option_box.hpp  popup_list.hpp  progress_box.hpp  scrollable_text.hpp  scrolling_text.hpp  sidebar.hpp  types.hpp  widget.hpp
include/frontend/menus/: appstore.hpp  custom_mtp_menu.hpp  file_picker.hpp  file_viewer.hpp  filebrowser.hpp  ftp_menu.hpp  game_menu.hpp  game_meta_menu.hpp  game_nca_menu.hpp  gc_menu.hpp  ghdl.hpp  goonies_main_menu.hpp  grid_menu_base.hpp  homebrew.hpp  image_viewer.hpp  install_stream_menu_base.hpp  irs_menu.hpp  main_menu.hpp  menu_base.hpp  mtp_menu.hpp  save_menu.hpp  settings_menu.hpp  themezer.hpp  usb_menu.hpp
include/installer/: installer_core.hpp
include/mtp/: haze_helper.hpp
include/yati/: yati.hpp
include/yati/container/: base.hpp  nsp.hpp  xci.hpp
include/yati/nx/: crypto.hpp  es.hpp  keys.hpp  nca.hpp  ncm.hpp  ncz.hpp  npdm.hpp  ns.hpp
include/yati/source/: base.hpp  file.hpp  stream.hpp  stream_file.hpp  usb.hpp
romfs/xml/: install_file_cell.xml
source/: app.cpp  catalog.cpp  catalog.hpp  download.cpp  dumper.cpp  evman.cpp  forwarder.cpp  forwarder.hpp  fs.cpp  ftpsrv_helper.cpp  hasher.cpp  haze_helper.cpp  i18n.cpp  image.cpp  location.cpp  log.cpp  main.cpp  main_sdl2.cpp  minizip_helper.cpp  nro.cpp  nro.hpp  nxlink.cpp  option.cpp  owo.cpp  owo.hpp  swkbd.cpp  threaded_file_transfer.cpp  title_info.cpp  torrent_engine.cpp  torrent_engine.hpp  usbdvd.cpp  web.cpp
source/app/: app_settings.cpp  app_settings.hpp  catalog_service.cpp  cleanup_helper.cpp  cleanup_helper.hpp  download_manager.cpp  game_metadata_service.cpp  homebrew_service.cpp  homebrew_service.hpp  installed_title_service.cpp  orphan_cleaner.hpp  update_service.hpp
source/backend_usb/: base.cpp  usb_dumper.cpp  usb_installer.cpp  usb_uploader.cpp  usbds.cpp  usbhs.cpp
source/core_utils/: audio.cpp  devoptab.cpp  devoptab_bfsar.cpp  devoptab_common.cpp  devoptab_fatfs.cpp  devoptab_ftp.cpp  devoptab_game.cpp  devoptab_http.cpp  devoptab_mounts.cpp  devoptab_nca.cpp  devoptab_nfs.cpp  devoptab_nro.cpp  devoptab_nsp.cpp  devoptab_romfs.cpp  devoptab_save.cpp  devoptab_sftp.cpp  devoptab_smb2.cpp  devoptab_vfs.cpp  devoptab_webdav.cpp  devoptab_xci.cpp  devoptab_zip.cpp  nsz_dumper.cpp  utils.cpp
source/frontend/: error_box.cpp  list.cpp  music_player.cpp  notification.cpp  nvg_util.cpp  option_box.cpp  popup_list.cpp  progress_box.cpp  scrollable_text.cpp  scrolling_text.cpp  sidebar.cpp  widget.cpp
source/frontend/menus/: appstore.cpp  custom_mtp_menu.cpp  file_picker.cpp  file_viewer.cpp  filebrowser.cpp  ftp_menu.cpp  game_menu.cpp  game_meta_menu.cpp  game_nca_menu.cpp  gc_menu.cpp  ghdl.cpp  goonies_main_menu.cpp  grid_menu_base.cpp  homebrew.cpp  image_viewer.cpp  install_stream_menu_base.cpp  irs_menu.cpp  main_menu.cpp  menu_base.cpp  mtp_menu.cpp  save_menu.cpp  settings_menu.cpp  themezer.cpp  usb_menu.cpp
source/install/: install_backend_switch.cpp
source/installer/: installer_core.cpp
source/mtp/: haze_helper.cpp
source/platform/: switch_crashlog.c
source/torrent_core/: dht.c  magnet_resolver.cpp  peer.h  piece.h  storage.c  storage.h  switch_performance.cpp  torrent.c  tracker.h
source/ui/: main_menu.cpp  main_menu.hpp
source/ui/catalog/: catalog_view.hpp
source/ui/common/: async_image.hpp  message_cells.hpp  ui_helpers.hpp
source/ui/downloads/: download_cell.hpp  downloads_view.hpp
source/ui/forwarders/: forwarder_details_view.cpp  forwarder_details_view.hpp  forwarders_view.cpp  forwarders_view.hpp
source/ui/installed/: install_browser.cpp  install_browser.hpp  installed_details_view.hpp  installed_view.hpp  local_install_view.cpp  (+1 more)
source/yati/: yati.cpp
(+23 files in other folders)
